--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container heads">
         <nav class="navigat">
           <a class="web link" href="./index.html">
@@ -51,7 +51,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <!-- main -->
     <main>
@@ -75,7 +75,7 @@
           <ul class="second-li list">
             <li class="li-items">
               <div class="svg-icon">
-                <svg class="svg-prinsp" width="64" height="64">
+                <svg class="svg-prinsp " width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
@@ -127,22 +127,49 @@
 
       <!-- Що ми робимо -->
 
-      <section class="third-sec">
+      <!-- <section class="third-sec">
         <div class="container doing">
           <h2 class="header-four">What are we doing</h2>
           <ul class="third list">
             <li class="thidr-li-it">
+              <picture>
+                    <source
+                      srcset="
+                        ./images/ps-desc@1x.jpg 1x,
+                        ./images/ps-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
               <img src="./images/ps.jpg" alt="Apps for pc" width="360" />
             </li>
             <li class="thidr-li-it">
+              <picture>
+                    <source
+                      srcset="
+                        ./images/app-desc@1x.jpg 1x,
+                        ./images/app-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
               <img src="./images/app.jpg" alt="Apps" width="360" />
             </li>
             <li class="thidr-li-it">
+              <picture>
+                    <source
+                      srcset="
+                        ./images/phone-desc@1x.jpg 1x,
+                        ./images/phone-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
               <img src="./images/phone.jpg" alt="Apps for phone" width="360" />
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Наша команда -->
       <section class="team">
@@ -150,6 +177,29 @@
           <h2 class="header-four">Our Team</h2>
           <ul class="team-ul list">
             <li class="four-list">
+              <picture>
+                <source
+                  srcset="
+                    ./images/mark-mobile@1x.jpg 1x,
+                    ./images/mark-mobile@2x.jpg 2x
+                  "
+                  media="(max-width=767px)"
+                />
+                <source
+                  srcset="
+                    ./images/mark-tab@1x.jpg 1x,
+                    ./images/mark-tab@2x.jpg 2x
+                  "
+                  media="(min-width=768px) and (max-width=1157px)"
+                />
+                <source
+                  srcset="
+                    ./images/mark-desc@1x.jpg 1x,
+                    ./images/mark-desc@2x.jpg 2x
+                  "
+                  media="(min-width=1158px)"
+                />
+              </picture>
               <img
                 src="./images/mark-guerrero.jpg"
                 alt="Mark Guerrero"
@@ -191,6 +241,29 @@
               </div>
             </li>
             <li class="four-list">
+              <picture>
+                <source
+                  srcset="
+                    ./images/tom-mobile@1x.jpg 1x,
+                    ./images/tom-mobile@2x.jpg 2x
+                  "
+                  media="(max-width=767px)"
+                />
+                <source
+                  srcset="
+                    ./images/tom-tab@1x.jpg 1x,
+                    ./images/tom-tab@2x.jpg 2x
+                  "
+                  media="(min-width=768px) and (max-width=1157px)"
+                />
+                <source
+                  srcset="
+                    ./images/tom-desc@1x.jpg 1x,
+                    ./images/tom-desc@2x.jpg 2x
+                  "
+                  media="(min-width=1158px)"
+                />
+              </picture> 
               <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
               <div class="name-posit">
                 <h3 class="name">Tom Ford</h3>
@@ -228,6 +301,29 @@
               </div>
             </li>
             <li class="four-list">
+              <picture>
+                <source
+                  srcset="
+                    ./images/camila-mobile@1x.jpg 1x,
+                    ./images/camila-mobile@2x.jpg 2x
+                  "
+                  media="(max-width=767px)"
+                />
+                <source
+                  srcset="
+                    ./images/camila-tab@1x.jpg 1x,
+                    ./images/camila-tab@2x.jpg 2x
+                  "
+                  media="(min-width=768px) and (max-width=1157px)"
+                />
+                <source
+                  srcset="
+                    ./images/camila-desc@1x.jpg 1x,
+                    ./images/camila-desc@2x.jpg 2x
+                  "
+                  media="(min-width=1158px)"
+                />
+              </picture> 
               <img
                 src="./images/camila-garcia.jpg"
                 alt="Camila Garcia"
@@ -271,6 +367,29 @@
             </li>
 
             <li class="four-list">
+              <picture>
+                <source
+                  srcset="
+                    ./images/daniel-mobile@1x.jpg 1x,
+                    ./images/daniel-mobile@2x.jpg 2x
+                  "
+                  media="(max-width=767px)"
+                />
+                <source
+                  srcset="
+                    ./images/daniel-tab@1x.jpg 1x,
+                    ./images/daniel-tab@2x.jpg 2x
+                  "
+                  media="(min-width=768px) and (max-width=1157px)"
+                />
+                <source
+                  srcset="
+                    ./images/daniel-desc@1x.jpg 1x,
+                    ./images/daniel-desc@2x.jpg 2x
+                  "
+                  media="(min-width=1158px)"
+                />
+              </picture> 
               <img
                 src="./images/daniel-wilson.jpg"
                 alt="Daniel Wilson"
