--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,29 @@
             <li class="photo-li">
               <a class="photo-list link" href="">
                 <div class="posittion">
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Banking-App-Interface-Concept-mobile@1x.jpg 1x,
+                        ./images/Banking-App-Interface-Concept-mobile@2x.jpg 2x
+                      "
+                      media="(max-width=767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Banking-App-Interface-Concept-tab@1x.jpg 1x,
+                        ./images/Banking-App-Interface-Concept-tab@2x.jpg 2x
+                      "
+                      media="(min-width=768px) and (max-width=1157px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Banking-App-Interface-Concept-desc@1x.jpg 1x,
+                        ./images/Banking-App-Interface-Concept-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
                   <img
                     src="./images/Banking-App-Interface-Concept.jpg"
                     alt="Banking App Interface Concept"
@@ -93,6 +116,29 @@
             <li class="photo-li">
               <a class="photo-list link" href="">
                 <div class="posittion">
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Cashless-Payment-mobile@1x.jpg 1x,
+                        ./images/Cashless-Payment-mobile@2x.jpg 2x
+                      "
+                      media="(max-width=767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Cashless-Payment-tab@1x.jpg 1x,
+                        ./images/Cashless-Payment-tab@2x.jpg 2x
+                      "
+                      media="(min-width=768px) and (max-width=1157px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Cashless-Payment-desc@1x.jpg 1x,
+                        ./images/Cashless-Payment-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
                   <img
                     src="./images/Cashless-Payment.jpg"
                     alt="Cashless Payment"
@@ -112,6 +158,29 @@
             <li class="photo-li">
               <a class="photo-list link" href="">
                 <div class="posittion">
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Meditation-App-mobile@1x.jpg 1x,
+                        ./images/Meditation-App-mobile@2x.jpg 2x
+                      "
+                      media="(max-width=767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Meditation-App-tab@1x.jpg 1x,
+                        ./images/Meditation-App-tab@2x.jpg 2x
+                      "
+                      media="(min-width=768px) and (max-width=1157px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Meditation-App-desc@1x.jpg 1x,
+                        ./images/Meditation-App-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
                   <img src="./images/Meditation-App.jpg" alt="Meditation App" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -128,6 +197,29 @@
             <li class="photo-li">
               <a class="photo-list link" href="">
                 <div class="posittion">
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Taxi-Service-mobile@1x.jpg 1x,
+                        ./images/Taxi-Service-mobile@2x.jpg 2x
+                      "
+                      media="(max-width=767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Taxi-Service-tab@1x.jpg 1x,
+                        ./images/Taxi-Service-tab@2x.jpg 2x
+                      "
+                      media="(min-width=768px) and (max-width=1157px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Taxi-Service-desc@1x.jpg 1x,
+                        ./images/Taxi-Service-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
                   <img src="./images/Taxi-Service.jpg" alt="Taxi Service" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -144,6 +236,29 @@
             <li class="photo-li">
               <a class="photo-list link" href="">
                 <div class="posittion">
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Screen-Illustrations-mobile@1x.jpg 1x,
+                        ./images/Screen-Illustrations-mobile@2x.jpg 2x
+                      "
+                      media="(max-width=767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Screen-Illustrations-tab@1x.jpg 1x,
+                        ./images/Screen-Illustrations-tab@2x.jpg 2x
+                      "
+                      media="(min-width=768px) and (max-width=1157px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Screen-Illustrations-desc@1x.jpg 1x,
+                        ./images/Screen-Illustrations-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
                   <img
                     src="./images/Screen-Illustrations.jpg"
                     alt="Screen Illustrations"
@@ -163,6 +278,29 @@
             <li class="photo-li">
               <a class="photo-list link" href="">
                 <div class="posittion">
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Online-Courses-mobile@1x.jpg 1x,
+                        ./images/Online-Courses-mobile@2x.jpg 2x
+                      "
+                      media="(max-width=767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Online-Courses-tab@1x.jpg 1x,
+                        ./images/Online-Courses-tab@2x.jpg 2x
+                      "
+                      media="(min-width=768px) and (max-width=1157px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Online-Courses-desc@1x.jpg 1x,
+                        ./images/Online-Courses-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
                   <img src="./images/Online-Courses.jpg" alt="Online Courses" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -179,6 +317,29 @@
             <li class="photo-li">
               <a class="photo-list link" href="">
                 <div class="posittion">
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Instagram-Stories-Concept-mobile@1x.jpg 1x,
+                        ./images/Instagram-Stories-Concept-mobile@2x.jpg 2x
+                      "
+                      media="(max-width=767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Instagram-Stories-Concept-tab@1x.jpg 1x,
+                        ./images/Instagram-Stories-Concept-tab@2x.jpg 2x
+                      "
+                      media="(min-width=768px) and (max-width=1157px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Instagram-Stories-Concept-desc@1x.jpg 1x,
+                        ./images/Instagram-Stories-Concept-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
                   <img
                     src="./images/Instagram-Stories-Concept.jpg"
                     alt="Instagram Stories Concept"
@@ -198,6 +359,29 @@
             <li class="photo-li">
               <a class="photo-list link" href="">
                 <div class="posittion">
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Organic-Food-mobile@1x.jpg 1x,
+                        ./images/Organic-Food-mobile@2x.jpg 2x
+                      "
+                      media="(max-width=767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Organic-Food-tab@1x.jpg 1x,
+                        ./images/Organic-Food-tab@2x.jpg 2x
+                      "
+                      media="(min-width=768px) and (max-width=1157px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Organic-Food-desc@1x.jpg 1x,
+                        ./images/Organic-Food-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
                   <img src="./images/Organic-Food.jpg" alt="Organic Food" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -214,6 +398,29 @@
             <li class="photo-li">
               <a class="photo-list link" href="">
                 <div class="posittion">
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Fresh-Coffee-mobile@1x.jpg 1x,
+                        ./images/Fresh-Coffee-mobile@2x.jpg 2x
+                      "
+                      media="(max-width=767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Fresh-Coffee-tab@1x.jpg 1x,
+                        ./images/Fresh-Coffee-tab@2x.jpg 2x
+                      "
+                      media="(min-width=768px) and (max-width=1157px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Fresh-Coffee-desc@1x.jpg 1x,
+                        ./images/Fresh-Coffee-desc@2x.jpg 2x
+                      "
+                      media="(min-width=1158px)"
+                    />
+                  </picture>
                   <img src="./images/Fresh-Coffee.jpg" alt="Fresh Coffee" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -282,7 +489,7 @@
           <form class="footer-form">
             <label class="mail-input-label" for="mail-input">
               <input
-              name="footer-inp-sub"
+                name="footer-inp-sub"
                 type="email"
                 id="mail-input"
                 placeholder="E-mail"
