--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css">
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -96,11 +97,12 @@
                       "
                       media="(min-width=1158px)"
                     />
+                    <img
+                      src="./images/Banking-App-Interface-Concept.jpg"
+                      alt="Banking App Interface Concept"
+                    />
                   </picture>
-                  <img
-                    src="./images/Banking-App-Interface-Concept.jpg"
-                    alt="Banking App Interface Concept"
-                  />
+
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -138,11 +140,12 @@
                       "
                       media="(min-width=1158px)"
                     />
+                    <img
+                      src="./images/Cashless-Payment.jpg"
+                      alt="Cashless Payment"
+                    />
                   </picture>
-                  <img
-                    src="./images/Cashless-Payment.jpg"
-                    alt="Cashless Payment"
-                  />
+
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -180,8 +183,12 @@
                       "
                       media="(min-width=1158px)"
                     />
+                    <img
+                      src="./images/Meditation-App.jpg"
+                      alt="Meditation App"
+                    />
                   </picture>
-                  <img src="./images/Meditation-App.jpg" alt="Meditation App" />
+
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -219,8 +226,9 @@
                       "
                       media="(min-width=1158px)"
                     />
+                    <img src="./images/Taxi-Service.jpg" alt="Taxi Service" />
                   </picture>
-                  <img src="./images/Taxi-Service.jpg" alt="Taxi Service" />
+
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -258,11 +266,12 @@
                       "
                       media="(min-width=1158px)"
                     />
+                    <img
+                      src="./images/Screen-Illustrations.jpg"
+                      alt="Screen Illustrations"
+                    />
                   </picture>
-                  <img
-                    src="./images/Screen-Illustrations.jpg"
-                    alt="Screen Illustrations"
-                  />
+
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -300,8 +309,12 @@
                       "
                       media="(min-width=1158px)"
                     />
+                    <img
+                      src="./images/Online-Courses.jpg"
+                      alt="Online Courses"
+                    />
                   </picture>
-                  <img src="./images/Online-Courses.jpg" alt="Online Courses" />
+
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -339,11 +352,12 @@
                       "
                       media="(min-width=1158px)"
                     />
+                    <img
+                      src="./images/Instagram-Stories-Concept.jpg"
+                      alt="Instagram Stories Concept"
+                    />
                   </picture>
-                  <img
-                    src="./images/Instagram-Stories-Concept.jpg"
-                    alt="Instagram Stories Concept"
-                  />
+
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -381,8 +395,9 @@
                       "
                       media="(min-width=1158px)"
                     />
+                    <img src="./images/Organic-Food.jpg" alt="Organic Food" />
                   </picture>
-                  <img src="./images/Organic-Food.jpg" alt="Organic Food" />
+
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -420,8 +435,9 @@
                       "
                       media="(min-width=1158px)"
                     />
+                    <img src="./images/Fresh-Coffee.jpg" alt="Fresh Coffee" />
                   </picture>
-                  <img src="./images/Fresh-Coffee.jpg" alt="Fresh Coffee" />
+
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
