--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/media.css" />
+    <link rel="stylesheet" href="./js/menu.js" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -50,7 +51,81 @@
             </li>
           </ul>
         </address>
-        <button type="button" class="open-menu-btn">Menu</button>
+        <button type="button" class="open-menu-btn" data-menu-open>
+          <svg width="32" height="22">
+            <use href="./images/icons.svg#icon-hamburger"></use>
+          </svg>
+        </button>
+      </div>
+
+      <!-- Mobile open menu -->
+
+      <div class="menu-nav-mobile is-hidden" data-menu>
+        <div>
+          <button type="button" class="close-menu-btn" data-menu-close>
+            X
+          </button>
+
+          <nav>
+            <ul class="mobile-nav">
+              <li class="mobile-nav-li">
+                <a class="mob-li" href="./index.html">Studio </a>
+              </li>
+              <li class="mobile-nav-li">
+                <a class="mob-li" href="./portfolio.html">Portfolio </a>
+              </li>
+              <li class="mobile-nav-li">
+                <a class="mob-li" href="">Contacts </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <address class="mobile-address">
+            <ul class="mobile-adr">
+              <li>
+                <a class="address-li" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a class="address-meil-li" href="mailto:info@devstudio.com"
+                  >info@devstudio.com
+                </a>
+              </li>
+            </ul>
+          </address>
+          <ul class="nav-list">
+            <li class="list-svg">
+              <a href="" class="social-list-link">
+                <svg class="media-svg" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-svg">
+              <a href="" class="social-list-link">
+                <svg class="media-svg" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-svg">
+              <a href="" class="social-list-link">
+                <svg class="media-svg" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-svg">
+              <a href="" class="social-list-link">
+                <svg class="media-svg" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
