--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container heads">
         <nav class="navigat">
           <a class="web link" href="./index.html">
@@ -56,11 +56,11 @@
             <use href="./images/icons.svg#icon-hamburger"></use>
           </svg>
         </button>
-      </div> -->
+      </div>
 
-    <!-- Mobile open menu -->
+      <!-- Mobile open menu -->
 
-    <!-- <div class="menu-nav-mobile is-hidden" data-menu>
+      <div class="menu-nav-mobile is-hidden" data-menu>
         <div>
           <button type="button" class="close-menu-btn" data-menu-close>
             X
@@ -127,7 +127,7 @@
           </ul>
         </div>
       </div>
-    </header> -->
+    </header>
 
     <!-- main -->
     <main>
