--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </ul>
         </nav>
         <address class="addss">
-          <ul class="list">
+          <ul class="list data">
             <li>
               <a class="address link" href="mailto:info@devstudio.com"
                 >info@devstudio.com
