--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <nav>
             <ul class="mobile-nav">
               <li class="mobile-nav-li">
-                <a class="mob-li" href="./index.html">Studio </a>
+                <a class="mob-li curr" href="./index.html">Studio </a>
               </li>
               <li class="mobile-nav-li">
                 <a class="mob-li" href="./portfolio.html">Portfolio </a>
